traffic-splitting-canary-deployment/car-rental-frontend-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-frontend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-rental-frontend
      version: v2
  template:
    metadata:
      labels:
        app: car-rental-frontend
        version: v2
    spec:
      containers:
        - name: nginx-reverse-proxy-container
          image: 676206914267.dkr.ecr.us-east-1.amazonaws.com/techcloud-academy-frontend-apps-nginx-proxy:adec382
          ports:
            - containerPort: 80
        - name: car-rental-frontend-container
          image: 676206914267.dkr.ecr.us-east-1.amazonaws.com/techcloud-academy-frontend-apps:new-features-about-page-d831d54
          ports:
            - containerPort: 3000
