traffic-splitting-canary-deployment/car-rental-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-backend #nameofdeployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: car-rental-backend #matchlabelforpod
  template: 
    metadata:
      labels: 
        app: car-rental-backend #labelforpod
    spec: 
      containers:
        - name: car-rental-backend-container
          image: 676206914267.dkr.ecr.us-east-1.amazonaws.com/techcloud-academy-backend-apps:adec382
          ports:
            - containerPort: 4000 #default-port-pgadmin
---
apiVersion: v1
kind: Service
metadata:
  name: car-rental-backend-service
spec:
  type: ClusterIP
  selector:
    app: car-rental-backend #labelofpodsshouldmatch
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
